--- a/shinobi-frontend/src/Components/Navigation/Navigation.css
+++ b/shinobi-frontend/src/Components/Navigation/Navigation.css
@@ -22,12 +22,39 @@
 .menu-toggler-label {
   transition: box-shadow 0.5s, background-color 0.5s;
   border: 0.125rem solid hsl(var(--clr-dark));
+  will-change: transform, box-shadow;
 }
 
 .menu-toggler:hover + label,
 .menu-toggler:focus + label {
   box-shadow: 0 0 0 0.33rem hsl(var(--clr-red) / 0.99);
   background-color: hsl(var(--clr-white) / 0.77);
+}
+
+/* Focus indicators for accessibility */
+.menu-toggler:focus-visible + label {
+  outline: 2px solid hsl(var(--clr-red));
+  outline-offset: 2px;
+  box-shadow: 0 0 0 0.33rem hsl(var(--clr-red) / 0.99);
+}
+
+.menu-item a:focus-visible {
+  outline: 2px solid hsl(var(--clr-red));
+  outline-offset: 2px;
+  box-shadow: 0 0 0 4px hsl(var(--clr-red) / 0.2);
+}
+
+/* Screen reader only class */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 .menu-toggler:checked + label {
   background: transparent;
@@ -38,31 +65,31 @@
   transition: box-shadow 0.5s;
 }
 .menu-toggler:checked + label:before {
-  transform: rotate(45deg) translateY(-15px) translateX(-15px);
+  transform: rotate(45deg) translate3d(-15px, -15px, 0);
 }
 .menu-toggler:checked + label:after {
-  transform: rotate(-45deg);
+  transform: rotate(-45deg) translate3d(0, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item {
   opacity: 1;
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-  transform: rotate(0deg) translate(-95px);
+  transform: rotate(0deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-  transform: rotate(60deg) translateX(-95px);
+  transform: rotate(60deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-  transform: rotate(120deg) translateX(-95px);
+  transform: rotate(120deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-  transform: rotate(180deg) translateX(-95px);
+  transform: rotate(180deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-  transform: rotate(240deg) translateX(-95px);
+  transform: rotate(240deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-  transform: rotate(300deg) translateX(-95px);
+  transform: rotate(300deg) translate3d(-95px, 0, 0);
 }
 .menu-toggler:checked ~ ul .menu-item a {
   pointer-events: auto;
@@ -78,12 +105,13 @@
   border-radius: 50%;
   text-align: center;
   background: hsl(var(--clr-white) / 0.5);
-  transition: transform 0.5s top 0.5s;
+  transition: transform 0.5s ease;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
+  will-change: transform;
 }
 .menu-toggler + label:before,
 .menu-toggler + label:after {
@@ -94,8 +122,9 @@
   left: 0;
   aspect-ratio: 1;
   border-radius: 50%;
-  transition: transform 0.77s top 0.77s;
+  transition: transform 0.77s ease;
   z-index: 1;
+  will-change: transform;
 }
 .menu-toggler + label:before {
   top: 10px;
@@ -133,26 +162,29 @@
   height: 4rem;
   opacity: 0;
   text-transform: uppercase;
-  transition: 1s ease-in-out;
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  will-change: transform, opacity;
 }
 .menu-item a {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: inherit;
   height: inherit;
-  line-height: 3.7rem;
   color: hsl(var(--clr-red));
   border: 2px solid hsl(var(--clr-dark));
   background: hsl(var(--clr-white) / 0.77);
   border-radius: 50%;
-  text-align: center;
   text-decoration: none;
   font-size: var(--fs-300);
   pointer-events: none;
-  transition: 0.2s;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+  will-change: transform, box-shadow;
 }
 .menu-item a:hover {
   box-shadow: 0 0 0 0.22rem hsl(var(--clr-red) / 0.99);
   background: hsl(var(--clr-white) / 0.99);
+  transition: all 0.3s ease;
 }
 
 /* styling hamb ICON */
@@ -177,7 +209,8 @@
   content: '';
   position: absolute;
   left: 0;
-  transition: all 0.5s;
+  transition: transform 0.5s ease;
+  will-change: transform;
 }
 
 .Navigation-icon::before {
@@ -221,29 +254,26 @@
     width: 4.5rem;
     height: 4.5rem;
   }
-  .menu-item a {
-    line-height: 4.2rem;
-  }
   .menu-item a:hover {
     box-shadow: 0 0 0 0.33rem hsl(var(--clr-red) / 0.99);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-    transform: rotate(0deg) translate(-105px);
+    transform: rotate(0deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-    transform: rotate(60deg) translateX(-105px);
+    transform: rotate(60deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-    transform: rotate(120deg) translateX(-105px);
+    transform: rotate(120deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-    transform: rotate(180deg) translateX(-105px);
+    transform: rotate(180deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-    transform: rotate(240deg) translateX(-105px);
+    transform: rotate(240deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-    transform: rotate(300deg) translateX(-105px);
+    transform: rotate(300deg) translate3d(-105px, 0, 0);
   }
 }
 @media screen and (min-width: 800px) {
@@ -259,29 +289,28 @@
     height: 4.8rem;
   }
   .menu-item a {
-    line-height: 4.5rem;
     font-size: var(--fs-400);
   }
   .menu-item a:hover {
     box-shadow: 0 0 0 0.36rem hsl(var(--clr-red) / 0.99);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-    transform: rotate(0deg) translate(-110px);
+    transform: rotate(0deg) translate3d(-110px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-    transform: rotate(60deg) translateX(-110px);
+    transform: rotate(60deg) translate3d(-110px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-    transform: rotate(120deg) translateX(-110px);
+    transform: rotate(120deg) translate3d(-110px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-    transform: rotate(180deg) translateX(-110px);
+    transform: rotate(180deg) translate3d(-110px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-    transform: rotate(240deg) translateX(-110px);
+    transform: rotate(240deg) translate3d(-110px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-    transform: rotate(300deg) translateX(-110px);
+    transform: rotate(300deg) translate3d(-110px, 0, 0);
   }
 }
 @media screen and (min-width: 1000px) {
@@ -293,7 +322,6 @@
     height: 5.4rem;
   }
   .menu-item a {
-    line-height: 5.1rem;
     font-size: var(--fs-400);
   }
   .menu-item a:hover {
@@ -304,22 +332,22 @@
     box-shadow: 0 0 0 0.66rem hsl(var(--clr-red) / 0.99);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-    transform: rotate(0deg) translate(-120px);
+    transform: rotate(0deg) translate3d(-120px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-    transform: rotate(60deg) translateX(-120px);
+    transform: rotate(60deg) translate3d(-120px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-    transform: rotate(120deg) translateX(-120px);
+    transform: rotate(120deg) translate3d(-120px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-    transform: rotate(180deg) translateX(-120px);
+    transform: rotate(180deg) translate3d(-120px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-    transform: rotate(240deg) translateX(-120px);
+    transform: rotate(240deg) translate3d(-120px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-    transform: rotate(300deg) translateX(-120px);
+    transform: rotate(300deg) translate3d(-120px, 0, 0);
   }
 }
 
@@ -335,28 +363,26 @@
     width: 4.5rem;
     height: 4.5rem;
   }
-  .menu-item a {
-    line-height: 4.2rem;
-  }
+
   .menu-item a:hover {
     box-shadow: 0 0 0 0.33rem hsl(var(--clr-red) / 0.99);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(1) {
-    transform: rotate(0deg) translate(-105px);
+    transform: rotate(0deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(2) {
-    transform: rotate(60deg) translateX(-105px);
+    transform: rotate(60deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(3) {
-    transform: rotate(120deg) translateX(-105px);
+    transform: rotate(120deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(4) {
-    transform: rotate(180deg) translateX(-105px);
+    transform: rotate(180deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(5) {
-    transform: rotate(240deg) translateX(-105px);
+    transform: rotate(240deg) translate3d(-105px, 0, 0);
   }
   .menu-toggler:checked ~ ul .menu-item:nth-child(6) {
-    transform: rotate(300deg) translateX(-105px);
+    transform: rotate(300deg) translate3d(-105px, 0, 0);
   }
 }
